# skill-xhs-poster

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PLAN-CLAUDE-cron-optimization.md  PLAN-GEMINI-cron-optimization.md  PLAN-OPENAI-cron-optimization.md  QUICKREF.md  README.md  REFERENCE.md  SKILL.md  pyproject.toml
.claude/: settings.json
.codex/plans/: 2026-03-13-phase2-image-semantics-plan.md  cli-command-rename.md  cloud-server-auth-migration.md  phase1-resumable-plan.md  phase3-plan-and-daily-records.md
.cursor/plans/: 实施顺序与里程碑_9a3c1f2d.plan.md  新阶段2技术方案_626447d3.plan.md  重构小红书自动发帖_cbd992dc.plan.md  阶段1页面勘探_7395ba83.plan.md  阶段3发布页勘探_4f2b7c1a.plan.md
agents/: openai.yaml
src/xhs_poster/: auth.py  browser.py  cli.py  config.py  consumer.py  content_gen.py  facts_builder.py  history_notes.py  hot_notes.py  image_allocation.py  image_assets.py  image_facts.py  image_pipeline.py  image_semantics.py  merchant.py  models.py  originality.py  phase1.py  phase2.py  phase2_report.py  phase3.py  trend_signals.py
tests/: test_image_allocation.py  test_image_pipeline.py  test_originality_gate.py  test_phase3_image_fallbacks.py
